adionado filtro de hinos por lingua

--- a/mobile/android/app/src/main/res/values/strings.xml
+++ b/mobile/android/app/src/main/res/values/strings.xml
@@ -1,7 +1,7 @@
 <?xml version='1.0' encoding='utf-8'?>
 <resources>
-    <string name="app_name">hinarioApp</string>
-    <string name="title_activity_main">hinarioApp</string>
+    <string name="app_name">Hinário - Louvai ao Senhor (IERA)</string>
+    <string name="title_activity_main">Hinário - Louvai ao Senhor (IERA)</string>
     <string name="package_name">com.ravunana</string>
     <string name="custom_url_scheme">com.ravunana</string>
 </resources>
